--- a/myapp/templates/home.html
+++ b/myapp/templates/home.html
@@ -80,7 +80,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="home/">Inicio</a>
+                    <a class="nav-link" href=" ">Inicio</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="aboutus/">Acerca de</a>
@@ -89,7 +89,7 @@
                     <a class="nav-link" href="services/">Servicios</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Contacto</a>
+                    <a class="nav-link" href="contact/">Contacto</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="login/">Iniciar sesión</a>
