--- a/myapp/templates/services.html
+++ b/myapp/templates/services.html
@@ -109,7 +109,7 @@
     <div class="row">
         <div class="col-lg-4 col-md-6">
             <div class="service">
-                <img src="../static/img/imagen7.png" alt="Servicio 1">
+                <img src="https://adolfocorona.github.io/blockchain/myapp/static/img/imagen7.png" alt="Servicio 1">
                 <h2>Linzfirma básico</h2>
                 <ul class="service-list">
                     <li>Poder validar 5 contratos al mes</li>
@@ -120,7 +120,7 @@
         </div>
         <div class="col-lg-4 col-md-6">
             <div class="service">
-                <img src="../static/img/imagen8.png" alt="Servicio 2">
+                <img src="https://adolfocorona.github.io/blockchain/myapp/static/img/imagen8.png" alt="Servicio 2">
                 <h2>Linzfirma empresarial </h2>
                 <ul class="service-list">
                     <li>Poder validar hasta 100 contratos al mes</li>
@@ -132,7 +132,7 @@
         </div>
         <div class="col-lg-4 col-md-6">
             <div class="service">
-                <img src="../static/img/imagen9.jpg" alt="Servicio 3">
+                <img src="https://adolfocorona.github.io/blockchain/myapp/static/img/imagen9.jpg" alt="Servicio 3">
                 <h2>Linzfirma premium</h2>
                 <ul class="service-list">
                     <li>Poder validar más de 200 contratos al mes</li>
