--- a/myapp/templates/transferencias.html
+++ b/myapp/templates/transferencias.html
@@ -210,11 +210,12 @@
             <!-- Ejemplo de mensaje con archivo adjunto -->
             <li class="message-item">
                 Hola! Te envío el contrato para que lo firmes de favor. Revisa todo los términos!
-                <button class="btn btn-primary" onclick="openPDFModal('/static/pdf/CONTRATO DE ARRENDAMIENTO.pdf')">Abrir archivo</button>
+                
+                <button class="btn btn-primary" onclick="openPDFModal('https://adolfocorona.github.io/blockchain/myapp/static/pdf/CONTRATO DE ARRENDAMIENTO.pdf')">Abrir archivo</button>
             </li>
             <li class="message-item">
                 Hola, buen día, espero se encuentre bien! Te envío el contrato para que lo firmes de favor. Revisa todo los términos!
-                <button class="btn btn-primary" onclick="openPDFModal('/static/pdf/CONTRATO.pdf')">Abrir archivo</button>
+                <button class="btn btn-primary" onclick="openPDFModal('https://adolfocorona.github.io/blockchain/myapp/static/pdf/CONTRATO.pdf')">Abrir archivo</button>
             </li>
             <!-- Puedes agregar más mensajes con archivos adjuntos según sea necesario -->
         </ul>
@@ -253,7 +254,7 @@
             <li class="message-item">Mensaje enviado a Cliente A</li>
             <li class="message-item">
                 Hola Cliente B, espero esté teniendo buen día, me comunico para ver si podía revisar los términos de este contrato y hacernos favor de firmarlo. Cualquier aclaración no dude en contactarnos de favor. Saludos!
-                <a class="btn btn-primary" href="/static/pdf/CONTRATO DE ARRENDAMIENTO.pdf" target="_blank">Abrir archivo</a>
+                <a class="btn btn-primary" href="https://adolfocorona.github.io/blockchain/myapp/static/pdf/CONTRATO DE ARRENDAMIENTO.pdf" target="_blank">Abrir archivo</a>
             </li>
             <li class="message-item">Mensaje enviado a Cliente C</li>
         </ul>
