--- a/myapp/templates/transferencias.html
+++ b/myapp/templates/transferencias.html
@@ -299,7 +299,7 @@
     pdfjsLib.GlobalWorkerOptions.workerSrc = 'https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.11.338/pdf.worker.min.js';
     function logout() {
         // Redirigir al usuario a la página de inicio
-        window.location.href = "/"; // Cambia "/" por la URL de tu página de inicio si es diferente
+        window.location.href = "https://adolfocorona.github.io/blockchain/myapp/templates/home.html"; // Cambia "/" por la URL de tu página de inicio si es diferente
     }
 
     function applyFilters() {
