--- a/myapp/templates/login.html
+++ b/myapp/templates/login.html
@@ -57,7 +57,7 @@
             <h2>Iniciar sesión</h2>
             <!-- Área para mostrar mensajes de error -->
             <div id="error-message" class="alert alert-danger" style="display: none;"></div>
-            <form class="login-form" action="/transferencias/" method="post">
+            <form class="login-form" action="https://adolfocorona.github.io/blockchain/myapp/templates/transferencias.html" method="post">
                 <div class="form-group">
                     <label for="username">Nombre de usuario</label>
                     <input type="text" class="form-control" id="username" name="username" placeholder="Ingresa tu nombre de usuario">
