--- a/myapp/templates/home.html
+++ b/myapp/templates/home.html
@@ -80,19 +80,19 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="https://adolfocorona.github.io/blockchain/myapp/templates/home.html">Inicio</a>
+                    <a class="nav-link" href=" ">Inicio</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="https://adolfocorona.github.io/blockchain/myapp/templates/aboutus.html">Acerca de</a>
+                    <a class="nav-link" href="aboutus/">Acerca de</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="https://adolfocorona.github.io/blockchain/myapp/templates/services.html">Servicios</a>
+                    <a class="nav-link" href="services/">Servicios</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="https://adolfocorona.github.io/blockchain/myapp/templates/contact.html">Contacto</a>
+                    <a class="nav-link" href="contact/">Contacto</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="https://adolfocorona.github.io/blockchain/myapp/templates/login.html">Iniciar sesión</a>
+                    <a class="nav-link" href="login/">Iniciar sesión</a>
                 </li>
             </ul>
         </div>
