--- a/myapp/templates/contact.html
+++ b/myapp/templates/contact.html
@@ -58,16 +58,16 @@
                     <a class="nav-link" href="http://127.0.0.1:8000/">Inicio</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/aboutus">Acerca de</a>
+                    <a class="nav-link" href="/aboutus/">Acerca de</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/services">Servicios</a>
+                    <a class="nav-link" href="/services/">Servicios</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/contact">Contacto</a>
+                    <a class="nav-link" href="/contact/">Contacto</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/login">Iniciar sesión</a>
+                    <a class="nav-link" href="/login/">Iniciar sesión</a>
                 </li>
             </ul>
         </div>
