--- a/myapp/templates/transferencias.html
+++ b/myapp/templates/transferencias.html
@@ -255,7 +255,10 @@
                 Hola Cliente B, espero esté teniendo buen día, me comunico para ver si podía revisar los términos de este contrato y hacernos favor de firmarlo. Cualquier aclaración no dude en contactarnos de favor. Saludos!
                 <a class="btn btn-primary" href="/static/pdf/CONTRATO DE ARRENDAMIENTO.pdf" target="_blank">Abrir archivo</a>
             </li>
-            <li class="message-item">Mensaje enviado a Cliente C</li>
+            <li class="message-item">
+                Hola, ya le envié el documento firmado, me podrías hacer favor de revisarlo.
+                <a class="btn btn-primary" href="/static/pdf/CONTRATO_FIRMADO.pdf" target="_blank">Abrir archivo</a>
+            </li>
         </ul>
     </div>
 
