--- a/myapp/templates/contact.html
+++ b/myapp/templates/contact.html
@@ -59,19 +59,19 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="/">Inicio</a>
+                    <a class="nav-link" href="https://adolfocorona.github.io/blockchain/myapp/templates/home.html">Inicio</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/aboutus/">Acerca de</a>
+                    <a class="nav-link" href="https://adolfocorona.github.io/blockchain/myapp/templates/aboutus.html">Acerca de</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/services/">Servicios</a>
+                    <a class="nav-link" href="https://adolfocorona.github.io/blockchain/myapp/templates/services.html">Servicios</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/contact/">Contacto</a>
+                    <a class="nav-link" href="https://adolfocorona.github.io/blockchain/myapp/templates/contact.html">Contacto</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/login/">Iniciar sesión</a>
+                    <a class="nav-link" href="https://adolfocorona.github.io/blockchain/myapp/templates/login.html">Iniciar sesión</a>
                 </li>
             </ul>
         </div>
@@ -84,7 +84,7 @@
     <div class="contact-info">
         <div class="row">
             <div class="col-md-6">
-                <img src="../static/img/itq.jpg" alt="Oficina">
+                <img src="https://github.com/adolfocorona/blockchain/blob/master/myapp/static/img/itq.jpg" alt="Oficina">
             </div>
             <div class="col-md-6">
                 <h2>Oficina Principal</h2>
@@ -99,7 +99,7 @@
                 <p>Teléfono: +987 654 321<br> Email: regional@linzchain.com</p>
             </div>
             <div class="col-md-6">
-                <img src="../static/img/logoitq.png" alt="Oficina Regional">
+                <img src="https://github.com/adolfocorona/blockchain/blob/master/myapp/static/img/logoitq.png" alt="Oficina Regional">
             </div>
         </div>
     </div>
