--- a/myapp/templates/services.html
+++ b/myapp/templates/services.html
@@ -83,19 +83,19 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="/">Inicio</a>
+                    <a class="nav-link" href="https://adolfocorona.github.io/blockchain/myapp/templates/home.html">Inicio</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/aboutus/">Acerca de</a>
+                    <a class="nav-link" href="https://adolfocorona.github.io/blockchain/myapp/templates/aboutus.html">Acerca de</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/services/">Servicios</a>
+                    <a class="nav-link" href="https://adolfocorona.github.io/blockchain/myapp/templates/services.html">Servicios</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/contact/">Contacto</a>
+                    <a class="nav-link" href="https://adolfocorona.github.io/blockchain/myapp/templates/contact.html">Contacto</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/login/">Iniciar sesión</a>
+                    <a class="nav-link" href="https://adolfocorona.github.io/blockchain/myapp/templates/login.html">Iniciar sesión</a>
                 </li>
             </ul>
         </div>
@@ -109,7 +109,7 @@
     <div class="row">
         <div class="col-lg-4 col-md-6">
             <div class="service">
-                <img src="../static/img/imagen7.png" alt="Servicio 1">
+                <img src="https://github.com/adolfocorona/blockchain/blob/master/myapp/static/img/imagen7.png" alt="Servicio 1">
                 <h2>Linzfirma básico</h2>
                 <ul class="service-list">
                     <li>Poder validar 5 contratos al mes</li>
@@ -120,7 +120,7 @@
         </div>
         <div class="col-lg-4 col-md-6">
             <div class="service">
-                <img src="../static/img/imagen8.png" alt="Servicio 2">
+                <img src=".https://github.com/adolfocorona/blockchain/blob/master/myapp/static/img/imagen8.png" alt="Servicio 2">
                 <h2>Linzfirma empresarial </h2>
                 <ul class="service-list">
                     <li>Poder validar hasta 100 contratos al mes</li>
@@ -132,7 +132,7 @@
         </div>
         <div class="col-lg-4 col-md-6">
             <div class="service">
-                <img src="../static/img/imagen9.jpg" alt="Servicio 3">
+                <img src="https://github.com/adolfocorona/blockchain/blob/master/myapp/static/img/imagen9.jpg" alt="Servicio 3">
                 <h2>Linzfirma premium</h2>
                 <ul class="service-list">
                     <li>Poder validar más de 200 contratos al mes</li>
