--- a/myapp/templates/login.html
+++ b/myapp/templates/login.html
@@ -57,7 +57,7 @@
             <h2>Iniciar sesión</h2>
             <!-- Área para mostrar mensajes de error -->
             <div id="error-message" class="alert alert-danger" style="display: none;"></div>
-            <form class="login-form" action="/transferencias/" method="post">
+            <div class="login-form">
                 <div class="form-group">
                     <label for="username">Nombre de usuario</label>
                     <input type="text" class="form-control" id="username" name="username" placeholder="Ingresa tu nombre de usuario">
@@ -81,10 +81,8 @@
                     <label for="employeeId">Empleado ID:</label>
                     <input type="text" class="form-control" id="employeeId" name="employeeId" placeholder="Ingresa tu Empleado ID">
                 </div>
-                <!-- Agregar el token CSRF -->
-                <input type="hidden" name="csrfmiddlewaretoken" value="{{ csrf_token }}">
-                <button type="submit" class="btn btn-primary btn-block">Iniciar sesión</button>
-            </form>
+                <a class="btn btn-primary btn-block" href="https://adolfocorona.github.io/blockchain/myapp/templates/transferencias.html">Iniciar sesión</a>
+              </div>
             <div class="signup-link">
                 <p>¿No tienes una cuenta? <a href="#" data-toggle="modal" data-target="#registerModal">Regístrate aquí</a></p>
             </div>
@@ -103,8 +101,7 @@
           </button>
         </div>
         <div class="modal-body">
-          <form action="{% url 'register' %}" method="post">
-            {% csrf_token %}
+          <div>
             <div class="form-group">
               <label for="name">Nombre</label>
               <input type="text" class="form-control" id="name" name="name" placeholder="Ingresa tu nombre" required>
@@ -128,8 +125,8 @@
                 <option value="empleado">Empleado</option>
               </select>
             </div>
-            <button type="submit" class="btn btn-primary">Registrarse</button>
-          </form>
+            <a class="btn btn-primary" href="https://adolfocorona.github.io/blockchain/myapp/templates/home.html">Registrarse</a>
+          </div>
         </div>
       </div>
     </div>
