--- a/myapp/templates/transferencias.html
+++ b/myapp/templates/transferencias.html
@@ -210,11 +210,11 @@
             <!-- Ejemplo de mensaje con archivo adjunto -->
             <li class="message-item">
                 Hola! Te envío el contrato para que lo firmes de favor. Revisa todo los términos!
-                <button class="btn btn-primary" onclick="openPDFModal('/static/pdf/CONTRATO DE ARRENDAMIENTO.pdf')">Abrir archivo</button>
+                <button class="btn btn-primary" onclick="openPDFModal('https://github.com/adolfocorona/blockchain/blob/master/myapp/static/pdf/CONTRATO%20DE%20ARRENDAMIENTO.pdf')">Abrir archivo</button>
             </li>
             <li class="message-item">
                 Hola, buen día, espero se encuentre bien! Te envío el contrato para que lo firmes de favor. Revisa todo los términos!
-                <button class="btn btn-primary" onclick="openPDFModal('/static/pdf/CONTRATO.pdf')">Abrir archivo</button>
+                <button class="btn btn-primary" onclick="openPDFModal('https://github.com/adolfocorona/blockchain/blob/master/myapp/static/pdf/CONTRATO.pdf')">Abrir archivo</button>
             </li>
             <!-- Puedes agregar más mensajes con archivos adjuntos según sea necesario -->
         </ul>
@@ -253,11 +253,11 @@
             <li class="message-item">Mensaje enviado a Cliente A</li>
             <li class="message-item">
                 Hola Cliente B, espero esté teniendo buen día, me comunico para ver si podía revisar los términos de este contrato y hacernos favor de firmarlo. Cualquier aclaración no dude en contactarnos de favor. Saludos!
-                <a class="btn btn-primary" href="/static/pdf/CONTRATO DE ARRENDAMIENTO.pdf" target="_blank">Abrir archivo</a>
+                <a class="btn btn-primary" href="https://github.com/adolfocorona/blockchain/blob/master/myapp/static/pdf/CONTRATO%20DE%20ARRENDAMIENTO.pdf" target="_blank">Abrir archivo</a>
             </li>
             <li class="message-item">
                 Hola, ya le envié el documento firmado, me podrías hacer favor de revisarlo.
-                <a class="btn btn-primary" href="/static/pdf/CONTRATO_FIRMADO.pdf" target="_blank">Abrir archivo</a>
+                <a class="btn btn-primary" href="https://github.com/adolfocorona/blockchain/blob/master/myapp/static/pdf/CONTRATO_FIRMADO.pdf" target="_blank">Abrir archivo</a>
             </li>
         </ul>
     </div>
