--- a/myapp/templates/contact.html
+++ b/myapp/templates/contact.html
@@ -84,7 +84,7 @@
     <div class="contact-info">
         <div class="row">
             <div class="col-md-6">
-                <img src="https://github.com/adolfocorona/blockchain/blob/master/myapp/static/img/itq.jpg" alt="Oficina">
+                <img src="https://adolfocorona.github.io/blockchain/myapp/static/img/itq.jpg" alt="Oficina">
             </div>
             <div class="col-md-6">
                 <h2>Oficina Principal</h2>
@@ -99,7 +99,7 @@
                 <p>Teléfono: +987 654 321<br> Email: regional@linzchain.com</p>
             </div>
             <div class="col-md-6">
-                <img src="https://github.com/adolfocorona/blockchain/blob/master/myapp/static/img/logoitq.png" alt="Oficina Regional">
+                <img src="https://adolfocorona.github.io/blockchain/myapp/static/img/logoitq.png" alt="Oficina Regional">
             </div>
         </div>
     </div>
