--- a/myapp/templates/home.html
+++ b/myapp/templates/home.html
@@ -12,7 +12,7 @@
             font-family: Arial, sans-serif;
             background-color: #f8f9fa;
             /* Establecer el logo como fondo */
-            background-image: url("https://github.com/adolfocorona/blockchain/blob/master/myapp/static/img/logo.jpg");
+            background-image: url("https://adolfocorona.github.io/blockchain/myapp/static/img/logo.jpg");
             background-size: cover; /* Ajustar el tamaño para cubrir toda la pantalla */
             background-position: center; /* Centrar la imagen */
             background-repeat: no-repeat; /* Evitar la repetición */
