--- a/myapp/templates/login.html
+++ b/myapp/templates/login.html
@@ -159,7 +159,7 @@
         localStorage.setItem("userType", userType);
         console.log(localStorage);
         // Redirigir a la página de transferencias
-        window.location.href = "  .html";
+        window.location.href = "https://adolfocorona.github.io/blockchain/myapp/templates/transferencias.html";
     }
 </script>
 
