--- a/myapp/templates/transferencias.html
+++ b/myapp/templates/transferencias.html
@@ -251,8 +251,8 @@
     function loadTransferencias() {
         var transferencias = [
             { fecha: '2024-01-15', monto: 100, descripcion: 'Pago de servicios' },
-            { fecha: '2024-02-20', monto: 250, descripcion: 'Compra en tienda' },
-            { fecha: '2024-03-05', monto: 150, descripcion: 'Transferencia a amigo' }
+            { fecha: '2024-02-20', monto: 250, descripcion: 'Renta' },
+            { fecha: '2024-03-05', monto: 150, descripcion: 'Pago diferido' }
         ];
 
         var transferenciaList = document.querySelector('.transferencia-list');
